--- a/frontend/src/styles/Profile.css
+++ b/frontend/src/styles/Profile.css
@@ -1,9 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-:root {
-  --main-bg-color: #306eff;
-}
-
 ::-webkit-scrollbar {
   width: 0px;
 }
@@ -20,21 +16,26 @@
   position: relative;
   min-height: 100vh;
   background-color: #fff;
+  background-image: url("/background8.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .navigation {
   position: fixed;
-  top: 20px;
-  left: 20px;
-  bottom: 20px;
-  width: 300px;
+  top: 50px;
+  left: 50px;
+  bottom: 50px;
+  width: 257px;
   border-radius: 10px;
   box-sizing: initial;
-  border-left: 5px solid var(--main-bg-color);
-  background-color: var(--main-bg-color);
-  transition: width 0.3s 0.05s;
+  transition: all 0.3s ease;
   overflow-x: hidden;
   z-index: 100;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  background-color: rgba(255, 255, 255, 0.05);
 }
 
 .navigation ul {
@@ -42,7 +43,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  padding-left: 5px;
+  padding-left: 10px;
   padding-top: 40px;
 }
 
@@ -56,47 +57,29 @@
 }
 
 .navigation ul li.active {
-  background-color: #fff;
+  background-color: #ffffff;
 }
 
 .navigation ul li.active b:nth-child(1) {
   position: absolute;
   top: -20px;
   right: 0;
-  width: 100%;
+  width: 20px;
   height: 20px;
-  background-color: #fff;
-}
-
-.navigation ul li.active b:nth-child(1)::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  border-bottom-right-radius: 20px;
-  background-color: var(--main-bg-color);
-  width: 100%;
-  height: 100%;
+  background-color: transparent;
+  box-shadow: 5px 6px #ffffff;
+  border-radius: 0 0 10px 0;
 }
 
 .navigation ul li.active b:nth-child(2) {
   position: absolute;
   bottom: -20px;
   right: 0;
-  width: 100%;
+  width: 20px;
   height: 20px;
-  background-color: #fff;
-}
-
-.navigation ul li.active b:nth-child(2)::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  border-top-right-radius: 50px;
-  background-color: var(--main-bg-color);
-  width: 100%;
-  height: 100%;
+  background-color: transparent;
+  box-shadow: 5px -6px #ffffff;
+  border-radius: 0 10px 0 0;
 }
 
 .navigation ul li.active a {
@@ -109,6 +92,12 @@
   display: flex;
   text-decoration: none;
   color: #fff;
+}
+
+.navigation ul li a:hover {
+  background-color: rgba(255, 255, 255, 0.4);
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
 }
 
 .navigation ul li a .icon {
@@ -127,7 +116,6 @@
 .navigation ul li a .title {
   position: relative;
   display: block;
-  padding-left: 10px;
   height: 60px;
   line-height: 60px;
   white-space: normal;
@@ -143,7 +131,8 @@
   right: 20px;
   height: 60px;
   width: 60px;
-  background-color: var(--main-bg-color);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
   border-radius: 10px;
   cursor: pointer;
   display: flex;
@@ -184,55 +173,24 @@
 }
 
 .content {
-  margin-left: 340px;
+  position: fixed;
+  top: 50px;
+  bottom: 50px;
+  right: 50px;
+  width: 1180px;
+  background: transparent;
   padding: 20px;
-  transition: margin-left 0.3s;
+  border: 5px solid rgb(255, 255, 255);
+  border-radius: 20px;
+  transition: all 0.3s ease;
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
 }
 
 .navigation.responsive ~ .content {
-  margin-left: 110px;
-}
-
-.profile-header {
-  display: flex;
-  align-items: center;
-  margin-bottom: 30px;
-}
-
-.avatar {
-  border-radius: 50%;
-  margin-right: 20px;
-}
-
-.user-details h3 {
-  font-size: 24px;
-  margin-bottom: 5px;
-}
-
-.user-details p {
-  color: #666;
-}
-
-.profile-form {
-  max-width: 600px;
-}
-
-.form-group {
-  margin-bottom: 20px;
-}
-
-.form-group label {
-  display: block;
-  margin-bottom: 8px;
-  font-weight: 500;
-}
-
-.form-group input {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  font-size: 16px;
+  margin-left: 90px;
+  width: 1366px;
+  transition: all 0.3s ease;
 }
 
 .security-section {
@@ -243,7 +201,7 @@
 .security-section button {
   padding: 10px 20px;
   width: 25vw;
-  background-color: var(--main-bg-color);
+  background-color: #306eff;
   color: white;
   border: none;
   border-radius: 4px;
@@ -260,19 +218,23 @@
   position: absolute;
   bottom: 50px;
   width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .sign-out-container .sign-out {
   position: relative;
   list-style: none;
-  width: 95%;
+  width: 90%;
   border-radius: 20px;
   transition: background-color 0.3s ease;
   cursor: pointer;
+  background-color: rgba(100, 6, 6, 0.4);
+  border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 .sign-out-container .sign-out:hover {
-  background-color: rgba(0, 0, 0, 0.13);
+  background-color: rgba(255, 255, 255, 0.4);
 }
 
 .sign-out-container .sign-out a {
