--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -113,10 +113,10 @@ image{
 
 .dropdown-item,
 .logout {
-  padding: 10px 16px;
+  padding: 10px 26px;
   cursor: pointer;
   display: flex;
-  justify-content: space-between;
+  gap: 10px;
   align-items: center;
   font-size: 14px;
   color: #333;
@@ -125,7 +125,12 @@ image{
 
 .dropdown-item:hover,
 .logout:hover {
-  background-color: #f0f0f0;
+  background-color: #f5f8ff;
+}
+
+.dropdown-item svg,
+.logout svg {
+  font-size: 16px;
 }
 
 .icon {
@@ -188,7 +193,7 @@ image{
 
   .nav-link:hover {
     background: none;
-    transform: scale(1.3);
+    transform: scale(1.1);
     transition: transform 0.1s all-ease;
   }
 
