--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -1,13 +1,13 @@
 .navbar {
   position: sticky;
   top: 0;
-  height: 60px;
   z-index: 100;
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: all 0.5s ease;
 }
 
 image{
@@ -165,6 +165,14 @@ image{
 
 .hamburger {
   display: none;
+  background: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+  font-size: 1.5rem;
+  cursor: pointer;
+  text-decoration: none;
+  color: inherit;
 }
 
 @media (max-width: 768px) {
