--- a/frontend/src/styles/Profile.css
+++ b/frontend/src/styles/Profile.css
@@ -15,7 +15,7 @@
   transition: all 0.3s ease;
   overflow-x: hidden;
   z-index: 100;
-  border: 1px solid white;
+  border: 1px solid #f8f9fa;
   background-color: rgb(0, 123, 255);
 }
 
@@ -65,7 +65,7 @@
 }
 
 .navigation ul li.active {
-  background-color: #ffffff;
+  background-color: #f8f9fa;
 }
 
 .navigation ul li.active b:nth-child(1),
@@ -80,14 +80,14 @@
   top: -20px;
   right: 0;
   border-radius: 0 0 10px 0;
-  box-shadow: 5px 6px #ffffff;
+  box-shadow: 5px 6px #f8f9fa;
 }
 
 .navigation ul li.active b:nth-child(2) {
   bottom: -20px;
   right: 0;
   border-radius: 0 10px 0 0;
-  box-shadow: 5px -6px #ffffff;
+  box-shadow: 5px -6px #f8f9fa;
 }
 
 .navigation ul li.active a {
@@ -214,7 +214,7 @@
   border-radius: 20px;
   transition: all 0.3s ease;
   overflow-x: auto;
-  background-color: #ffffff;
+  background-color: #f8f9fa;
 }
 
 .content-overlay {
