--- a/frontend/src/styles/header.css
+++ b/frontend/src/styles/header.css
@@ -1,5 +1,5 @@
 .header {
-  background-image:  url("/backdrop1.png");
+  background-image:  url("/mainbg3.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -16,18 +16,6 @@
   position: relative;
   overflow: hidden;
   border-radius: 20px;
-
-}
-
-.header::after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100px;
-  background: linear-gradient(transparent, rgba(0, 0, 0, 0.1));
-  z-index: 1;
 }
 
 .header h1 {
